--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grumbler",
+  "name": "zalgo-promise",
   "version": "1.0.0",
   "description": "Javascript module template.",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/krakenjs/grumbler.git"
+    "url": "git://github.com/krakenjs/zalgo-promise.git"
   },
   "keywords": [
     "template"
