--- a/.flowconfig
+++ b/.flowconfig
@@ -5,6 +5,7 @@
 [include]
 [libs]
 flow-typed
+src/types.js
 [options]
 module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
 unsafe.enable_getters_and_setters=true
