--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-flow-runtime": "^0.11.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.13.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-for-of": "^6.8.0",
@@ -73,7 +74,5 @@
     "webpack-stream": "^3.2.0",
     "yargs": "^8.0.1"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
