--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": [ "es2015" ],
-  "plugins": [
-    "transform-flow-strip-types",
-    "transform-es3-property-literals",
-    "transform-es3-member-expression-literals",
-    "transform-class-properties",
-    ["transform-es2015-for-of", {"loose": true}]
-  ]
+  "extends": "grumbler-scripts/config/.babelrc-browser"
 }
