--- a/.flowconfig
+++ b/.flowconfig
@@ -1,13 +1,12 @@
 [ignore]
-.*/node_modules/gulp-flowtype
 .*/node_modules/babel-plugin-flow-runtime
 .*/node_modules/flow-runtime
+.*/node_modules/npm
 [include]
 [libs]
 flow-typed
 src/types.js
 [options]
 module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
-unsafe.enable_getters_and_setters=true
 experimental.const_params=false
 esproposal.export_star_as=enable
