--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "lint": "eslint src/ test/ *.js",
     "flow-typed": "flow-typed install",
     "flow": "flow",
-    "flow:build": "flow gen-flow-files ./src/index.js --out-dir ./dist/module",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
     "babel": "babel src/ --out-dir dist/module",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --display-optimization-bailout --progress",
     "test": "npm run lint && npm run flow-typed && npm run flow && npm run karma",
-    "build": "npm run test && npm run babel && npm run webpack && npm run flow:build",
+    "build": "npm run test && npm run babel && npm run webpack",
     "release": "./publish.sh",
     "release:patch": "./publish.sh patch",
     "release:minor": "./publish.sh minor",
@@ -41,7 +40,7 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
-    "flow-bin": "^0.70.0",
+    "flow-bin": "^0.100.0",
     "grumbler-scripts": "^2.0.65",
     "mocha": "^3.1.0"
   },
