Add codecov and badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
    - "lts/*"
+before_install:
+  - npm install -g codecov
 script: npm test
+after_success:
+  - codecov
