--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   ],
   "readmeFilename": "README.md",
   "devDependencies": {
-    "flow-bin": "^0.135.0",
+    "flow-bin": "0.155.0",
     "grumbler-scripts": "^3",
     "mocha": "^4"
   },
