--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: ▶️ Run build script
         run: npm run build
+
+      - name: ⬆️ Upload karma coverage report
+        uses: codecov/codecov-action@v2
