chore: move devDependencies to @krakenjs scope

--- a/.flowconfig
+++ b/.flowconfig
@@ -8,7 +8,7 @@
 [libs]
 flow-typed
 src/types.js
-node_modules/grumbler-scripts/declarations.js
+node_modules/@krakenjs/grumbler-scripts/declarations.js
 [options]
 module.name_mapper='^src\(.*\)$' -> '<PROJECT_ROOT>/src/\1'
 experimental.const_params=false
