--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@krakenjs/grumbler-scripts": "^6.0.2",
     "flow-bin": "0.155.0",
-    "grumbler-scripts": "^5.0.3",
     "husky": "^7.0.4",
     "mocha": "^4",
     "standard-version": "^9.3.2"
