chore!: move module output to esm folder and include types

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format": "prettier --write --ignore-unknown .",
     "format:check": "prettier --check .",
     "karma": "cross-env NODE_ENV=test babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/karma start",
-    "babel": "babel src/ --out-dir dist/module",
+    "babel": "babel src/ --out-dir dist/esm",
     "webpack": "babel-node --plugins=transform-es2015-modules-commonjs ./node_modules/.bin/webpack --display-optimization-bailout --progress",
     "test": "npm run format:check && npm run lint && npm run flow-typed && npm run flow && npm run karma",
-    "build": "npm run test && npm run babel && npm run webpack",
+    "build:types": "gen-flow-files src --out-dir dist/esm",
+    "build": "npm run test && npm run babel && npm run webpack && npm run build:types",
     "clean": "rimraf dist coverage",
     "reinstall": "rimraf flow-typed && rimraf node_modules && npm install && flow-typed install",
     "debug": "cross-env NODE_ENV=debug",
@@ -86,6 +87,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@krakenjs/grumbler-scripts": "^7.0.0",
     "flow-bin": "0.155.0",
+    "gen-flow-files": "^0.4.11",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.0",
     "mocha": "^4",
